# magnum_starter

./: CMakeLists.txt  README.md
source/: cube.main.cpp  terrain.main.cpp  test.main.cpp  triangle.main.cpp
source/engine/: ImGuizmo.cpp  ImGuizmo.h  camera.h  debug_draw.cpp  debug_draw.h  debug_draw.hpp  fast_noise.h  free_camera.cpp  free_camera.h  object_pool.cpp  object_pool.h  overlay.cpp  overlay.h
source/shader/: resources.conf  terrain.frag  terrain.vert
